--- a/package.json
+++ b/package.json
@@ -19,16 +19,38 @@
   },
   "dependencies": {
     "@heroicons/react": "2.1.3",
+    "@opentelemetry/api": "1.9.0",
     "@opentelemetry/auto-instrumentations-node": "0.47.1",
+    "@opentelemetry/auto-instrumentations-web": "0.40.0",
+    "@opentelemetry/context-zone": "1.25.1",
+    "@opentelemetry/core": "1.25.1",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "0.52.1",
+    "@opentelemetry/exporter-trace-otlp-grpc": "0.52.1",
     "@opentelemetry/exporter-trace-otlp-http": "0.52.1",
+    "@opentelemetry/instrumentation": "0.52.1",
+    "@opentelemetry/instrumentation-document-load": "0.39.0",
+    "@opentelemetry/instrumentation-fetch": "0.52.1",
+    "@opentelemetry/instrumentation-fs": "0.14.0",
+    "@opentelemetry/instrumentation-http": "0.52.1",
+    "@opentelemetry/instrumentation-user-interaction": "0.39.0",
+    "@opentelemetry/resource-detector-container": "0.3.11",
     "@opentelemetry/resources": "1.25.1",
+    "@opentelemetry/sdk-metrics": "1.25.1",
     "@opentelemetry/sdk-node": "0.52.1",
+    "@opentelemetry/sdk-trace-base": "1.25.1",
+    "@opentelemetry/sdk-trace-node": "1.25.1",
+    "@opentelemetry/sdk-trace-web": "1.25.1",
     "@opentelemetry/semantic-conventions": "1.25.1",
+    "@opentelemetry/tracing": "0.24.0",
+    "@opentelemetry/web": "0.24.0",
+    "@vercel/otel": "1.9.1",
     "clsx": "2.1.1",
     "date-fns": "3.6.0",
     "dinero.js": "2.0.0-alpha.10",
+    "install": "0.13.0",
     "ms": "3.0.0-canary.1",
     "next": "14.3.0-canary.33",
+    "npm": "10.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "0.0.1",
